src/objects/VIP_Event_SF_EXIT__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CTIA_VIP_Event_SF_EXITs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_IMEI__c</fullName>
        <label>Device IMEI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>VIP Event SF EXIT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VIP Event SF EXIT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VIP Event SF EXITs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>